[FIX] Add right top and bottom border radius to "Find" input when input group wraps in side columns (previous fix wasn't right).
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/17.x@62495 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/less/tiki-modules.less
+++ b/themes/base_files/less/tiki-modules.less
@@ -124,8 +124,8 @@ li.archivedate {
 	border-top-left-radius: @btn-border-radius-base;
 }
 
-#col2 .box-search .input-group .form-control:first-child[name="find"],
-#col3 .box-search .input-group .form-control:first-child[name="find"] {
+#col2 .box-search .input-group .form-control:first-child,
+#col3 .box-search .input-group .form-control:first-child {
 	border-bottom-right-radius: @btn-border-radius-base;
 	border-top-right-radius: @btn-border-radius-base;
 }
